# Graesp

./: .gitattributes  .gitignore  .mcp.json  GraEsp(2).eprj2  ProPrj_GraEsp(2)_2026-05-25.epro  README.md  app.js  index.html  style.css
Gerber_PCB1_2026-05-25/: Drill_NPTH_Through.DRL  Drill_PTH_Through.DRL  Drill_PTH_Through_Via.DRL  FlyingProbeTesting.json  Gerber_BoardOutlineLayer.GKO  Gerber_BottomLayer.GBL  Gerber_BottomPasteMaskLayer.GBP  Gerber_BottomSilkscreenLayer.GBO  Gerber_BottomSolderMaskLayer.GBS  Gerber_DocumentLayer.GDL  Gerber_DrillDrawingLayer.GDD  Gerber_TopLayer.GTL  Gerber_TopPasteMaskLayer.GTP  Gerber_TopSilkscreenLayer.GTO  Gerber_TopSolderMaskLayer.GTS
cloud-web/: README.md  index.html
desktop-app/: udp_telemetry_receiver.py  web_telemetry_server.py
docs/: Netlist_Schematic1_2026-05-19.tel  Netlist_Schematic1_2026-05-25.tel  communication-protocol.md  mqtt-remote-test.md  project-plan.md
firmware/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old  (+1 more)
firmware/main/: CMakeLists.txt  app_main.c
firmware/main/include/: alarm_controller.h  app_config.h  app_types.h  command_udp.h  current_estimator.h  device_identity.h  feature_extractor.h  model_predictor.h  model_weights.h  mqtt_bridge.h  ntc_sampler.h  overload_detector.h  runtime_stats.h  telemetry_json.h  telemetry_udp.h  wifi_station.h
firmware/main/src/: alarm_controller.c  command_udp.c  current_estimator.c  device_identity.c  feature_extractor.c  model_predictor.c  mqtt_bridge.c  ntc_sampler.c  overload_detector.c  runtime_stats.c  telemetry_json.c  telemetry_udp.c  wifi_station.c
(+25 files in other folders)
